# Vice_Snapshot_to_PRG

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  resources.rc
.cargo/: config.toml
.github/workflows/: release.yml
src/: asm6502.rs  asm_wrapper.rs  config.rs  convert_snapshot.rs  convert_snapshot_crt.rs  convert_snapshot_magic_desk_crt.rs  crt_builder.rs  file_system_manager.rs  find_ram.rs  lib.rs  load_save_hook.rs  main.rs  make_crt_asm.rs  make_magic_desk_boot_asm.rs  make_magic_desk_crt_asm.rs  make_prg_asm.rs  make_romh_asm.rs  parse_vsf.rs  patch_mem.rs
src/cli/: main.rs
wix/: main.wxs
