[package]
name = "vice-snapshot-to-prg-converter"
version = "0.9.0"
edition = "2024"
authors = ["Tommy Olsen"]

[dependencies]
fltk = { version = "1.4", features = ["fltk-bundled"] }
asm6502 = { git = "https://github.com/tommyo123/asm6502" }
lzsa-sys = { git = "https://github.com/tommyo123/lzsa-sys" }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
