[package]
name = "vice-snapshot-to-prg-converter"
version = "1.9.0"
edition = "2024"
authors = ["Tommy Olsen"]

# Expose modules as library so CLI can use them
[lib]
name = "vice_snapshot_to_prg_converter"
path = "src/lib.rs"

# GUI binary (default)
[[bin]]
name = "vice-snapshot-to-prg-converter"
path = "src/main.rs"

# CLI binary
[[bin]]
name = "vice-snapshot-to-prg-converter-cli"
path = "src/cli/main.rs"

[dependencies]
fltk = { version = "1.5.22", features = ["fltk-bundled"] }
asm6502 = { git = "https://github.com/tommyo123/asm6502" }
lzsa-sys = { git = "https://github.com/tommyo123/lzsa-sys" }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = false
codegen-units = 1